+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.3.5rc1?
==============================

*Release date: 26-JAN-2005*

Core and builtins
-----------------

- Bug #1074011: closing sys.std{in,out,err} now causes a flush() and 
  an ferror() call.

- Bug #1055820 Cyclic garbage collection was not protecting against that
  calling a live weakref to a piece of cyclic trash could resurrect an
  insane mutation of the trash if any Python code ran during gc (via
  running a dead object's __del__ method, running another callback on a
  weakref to a dead object, or via any Python code run in any other thread
  that managed to obtain the GIL while a __del__ or callback was running
  in the thread doing gc).  The most likely symptom was "impossible"
  ``AttributeEror`` exceptions, appearing seemingly at random, on weakly
  referenced objects.  The cure was to clear all weakrefs to unreachable
  objects before allowing any callbacks to run.

- Bug #951851: Python crashed when reading import table of certain
  Windows DLLs

- Bug #966623. classes created with type() in an exec(, {}) don't
  have a __module__, but code in typeobject assumed it would always
  be there.

- Bug #952807:  Unpickling pickled instances of subclasses of
  datetime.date, datetime.datetime and datetime.time could yield insane
  objects.  Thanks to Jiwon Seo for a fix.

- Bug #845802: Python crashed when __init__.py is a directory.

- Bug #875692: Improve signal handling, especially when using threads, by
  forcing an early re-execution of PyEval_EvalFrame() "periodic" code when
  things_to_do is not cleared by Py_MakePendingCalls().

Extension modules
-----------------

- Patch #1012280: Fix term.h compilation problems on Solaris.

- Patch #914291: Set locale while getting a line from readline.

- Bug #1005308: Define _BSD_TYPES.

- Patch #1005568: Use _SC_PAGESIZE on Irix in resourcemoudle.
